--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@ body {
     width: 800px;
     margin: 0 auto;
     font-family: 'Open Sans', sans-serif;
-    background: url("../images/weather_pic.jpeg");
+    background: url("../images/weather_pic.jpeg") no-repeat center center/cover; 
  background-size: cover;
   }
   .container {
