--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 body {
     width: 800px;
+    height: 100vh;
     margin: 0 auto;
     font-family: 'Open Sans', sans-serif;
     background: url("../images/weather_pic.jpeg") no-repeat center center/cover; 
