--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Weatherly</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet" type="text/css" />
