--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 body {
     width: 800px;
     height: 100vh;
+    max-width: 100%;
     margin: 0 auto;
     font-family: 'Open Sans', sans-serif;
     background: url("../images/weather_pic.jpeg") no-repeat center center/cover; 
