--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,9 @@
 body {
     width: 800px;
     height: 100vh;
-    max-width: 100%;
     margin: 0 auto;
     font-family: 'Open Sans', sans-serif;
-    background: url("../images/weather_pic.jpeg") no-repeat center center/cover; 
+    background: url("../images/weather_pic.jpeg"); 
  background-size: cover;
   }
   .container {
