--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-    width: 800px;
+    max-width: 100%;
     height: 100vh;
     margin: 0 auto;
     font-family: 'Open Sans', sans-serif;
@@ -41,7 +41,6 @@ body {
       max-width: 70%;
     display: block;
     font-weight:300;
-    width: 100%;
     font-size: 25px;
     border:0px;
     outline: none;
