--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,18 +34,16 @@ body {
     border-image-width: initial;
     border-image-outset: initial;
     border-image-repeat: initial;
-    min-width: -webkit-min-content;
     padding: 30px;
   }
 
   .ghost-input, p {
-      max-width: 70%;
+      max-width: 90%;
     display: block;
     font-weight:300;
     font-size: 25px;
     border:0px;
     outline: none;
-    width: 100%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -53,7 +51,7 @@ body {
     background: #fff;
     font-family: Open Sans,Verdana;
     padding: 10px 15px;
-    margin: 30px 0px;
+    margin: 30px auto;
     -webkit-transition: all 0.1s ease-in-out;
     -moz-transition: all 0.1s ease-in-out;
     -ms-transition: all 0.1s ease-in-out;
@@ -69,8 +67,8 @@ body {
     background-color: transparent;
     border:2px solid #ddd;
     padding:10px 30px;
-    width: 100%;
-    min-width: 350px;
+    width: 90%;
+    margin: auto;
     -webkit-transition: all 0.1s ease-in-out;
     -moz-transition: all 0.1s ease-in-out;
     -ms-transition: all 0.1s ease-in-out;
