--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,87 +1,83 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-    max-width: 100%;
-    height: 100vh;
-    margin: 0 auto;
-    font-family: 'Open Sans', sans-serif;
-    background: url("../images/weather_pic.jpeg"); 
- background-size: cover;
-  }
+  max-width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+  font-family: 'Open Sans', sans-serif;
+  background: url("https://images.unsplash.com/photo-1508697014387-db70aad34f4d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60") no-repeat center center/cover;
+}
+
+.container{
+  max-width: 50%;
+  height: 90vh;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.container .content {
+  background: #ccc;
+  padding: 4rem 2rem 3rem;
+  border-radius: 0.5rem;
+}
+
+input{
+  display: inline-block;
+  padding: 0.2rem 1.2rem;
+  border-radius: 0.5rem;
+  width: 100%;
+  border: none;
+  outline: none;
+}
+
+.ghost-input{
+  height: 60px;
+  margin-bottom: 2rem;
+  font-size: 1.2rem;
+}
+
+.ghost-button{
+  background: #01BFBF;
+  color: #FFF;
+  height: 55px;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+p{
+  color: green;
+  font-weight: 600;
+  font-size: 1rem;
+  text-align: center;
+  margin-top: 2rem;
+}
+
+@media(max-width: 800px){
   .container {
-      max-width: 100%;
-    margin: 0 auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: .7;
-    background-color: rgb(141, 153, 165);
-    border-radius: 10px;
+    max-width: 80%;
+    height: 80vh;
   }
 
-  fieldset {
-      max-width: 100%;
-    display: block;
-      margin: auto;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;
-    -webkit-padding-before: 0em;
-    -webkit-padding-start: 0em;
-    -webkit-padding-end: 0em;
-    -webkit-padding-after: 0em;
-    border: 0px;
-    border-image-source: initial;
-    border-image-slice: initial;
-    border-image-width: initial;
-    border-image-outset: initial;
-    border-image-repeat: initial;
-    padding: 30px;
-  }
-
-  .ghost-input, p {
-      max-width: 90%;
-    display: block;
-    font-weight:300;
-    font-size: 25px;
-    border:0px;
-    outline: none;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    color: #4b545f;
-    background: #fff;
-    font-family: Open Sans,Verdana;
-    padding: 10px 15px;
-    margin: 30px auto;
-    -webkit-transition: all 0.1s ease-in-out;
-    -moz-transition: all 0.1s ease-in-out;
-    -ms-transition: all 0.1s ease-in-out;
-    -o-transition: all 0.1s ease-in-out;
-    transition: all 0.1s ease-in-out;
-  }
-
-  .ghost-input:focus {
-    border-bottom:1px solid #ddd;
+  .ghost-input {
+    height: 50px;
   }
 
   .ghost-button {
-    background-color: transparent;
-    border:2px solid #ddd;
-    padding:10px 30px;
-    width: 90%;
-    margin: auto;
-    -webkit-transition: all 0.1s ease-in-out;
-    -moz-transition: all 0.1s ease-in-out;
-    -ms-transition: all 0.1s ease-in-out;
-    -o-transition: all 0.1s ease-in-out;
-    transition: all 0.1s ease-in-out;
-    color: white;
-    font-weight: bold;
+    height: 45px;
   }
 
-  .ghost-button:hover {
-    border:2px solid #515151;
+}
+
+@media(max-width: 500px){
+  .container {
+    max-width: 90%;
   }
 
-  p {
-    color: #19e623;
-  }
+}
